# bstk-datatables

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-release.yaml  publish-release.yaml  publish_test_results.yaml  python-unit-test-on-push.yaml
bstk_datatables/: __init__.py  entry.py  enum.py  merge.py  schema.py  table.py
tests/functional/: pytest.ini  test_asset_manager_sample.py  test_crm_sample.py  test_persistence_documents.py  test_usage_sample.py
tests/integration/: pytest.ini  test_schemafield_attrs.py  test_schemafield_connector.py  test_schemafield_email.py  test_schemafield_ip.py  test_schemafield_macaddress.py  test_schemafield_number.py  test_schemafield_string_markup.py  test_schemafield_url.py  test_table_interactions.py
tests/unit/: test table.py  test_base_entry.py  test_base_models.py  test_base_schema.py  test_custom_validators.py  test_entry.py  test_enum.py  test_schema.py  test_schema_field_mapping.py  test_schema_merge.py  test_schemafield.py  test_schemafield_mapping.py  test_table.py
